--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,10 +6,13 @@ authors = ["Roger Chylla <rogerchylla1205@gmail.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.11.6"
+python = "3.12"
 pymongo = "^4.6.1"
 pyyaml = "^6.0.1"
+numpy = "^1.25"
 
+[tool.poetry.scripts]
+test_connect = "util.scripts.test_connection:main"
 
 [build-system]
 requires = ["poetry-core"]
